--- a/Makefile.example
+++ b/Makefile.example
@@ -35,6 +35,12 @@ include $(MAKEFILE_DIR)/Dev8bp/cfg/Makefile.mk
 # Sobrescribir variables con valores específicos del proyecto
 # Descomenta y ajusta según tu proyecto:
 
+# Nombre del proyecto (usado para el DSK)
+# PROJECT_NAME := MI_JUEGO
+
+# Nivel de compilación (0-4)
+# BUILD_LEVEL := 0
+
 # Ruta al directorio ASM del proyecto
 # 8BP_ASM_PATH := ./mi_proyecto/8BP_V43/ASM
 
