feat: Add C compilation support with SDCC
- Add 'make c' target for compiling C code with SDCC
- Automatic hex2bin conversion from .ihx to .bin
- Memory limit verification (max 23999 to avoid destroying 8BP library)
- Auto-integration with DSK generation
- Add C_PATH, C_SOURCE, C_CODE_LOC variables
- Update documentation with C compilation section
- Reorganize examples: move C code to examples/C/
- Clean up old BASIC and output folders
- Update Makefile.example with all variables including C support

--- a/Makefile.example
+++ b/Makefile.example
@@ -46,7 +46,12 @@ ASM_PATH := $(CURDIR)/ASM
 # Ruta al directorio BASIC (archivos .bas que se añadirán al DSK)
 BASIC_PATH := $(CURDIR)/bas
 
-# Directorio de objetos intermedios (bin, lst, map)
+# Ruta al directorio C (código C con SDCC - opcional)
+C_PATH := $(CURDIR)/C
+C_SOURCE := ciclo.c
+C_CODE_LOC := 20000
+
+# Directorio de objetos intermedios (bin, lst, map, ihx)
 OBJ_DIR := obj
 
 # Directorio de salida para DSK
