--- a/examples/Makefile
+++ b/examples/Makefile
@@ -37,10 +37,15 @@ PROJECT_NAME := MY_GAME_MOLON
 BUILD_LEVEL := 0
 
 # Path codigo emsembler 8BP
-ASM_PATH := $(CURDIR)/ASM
+ASM_PATH := ASM
 
 # Path archivos BASIC (se añadirán al DSK automáticamente)
-BASIC_PATH := $(CURDIR)/bas
+BASIC_PATH := bas
+
+# Path código C (se compilará con SDCC si existe)
+C_PATH := C
+C_SOURCE := ciclo.c
+C_CODE_LOC := 20000
 
 # Path Binario Generado (objetos intermedios)
 OBJ_DIR := obj
