feat: Add graphics memory verification (_END_GRAPH)
- Verify _END_GRAPH label in make_all_mygame.map after compilation
- Check that _END_GRAPH < 42040 (max 8440 bytes of graphics)
- Exit with error if limit exceeded to prevent BASIC interpreter corruption
- Show graphics size and provide solutions if limit exceeded
- Parse JSON format map file correctly

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -37,7 +37,7 @@ PROJECT_NAME := MY_GAME_MOLON
 BUILD_LEVEL := 0
 
 # Path codigo emsembler 8BP
-ASM_PATH := ASM
+ASM_PATH := asm
 
 # Path archivos BASIC (se añadirán al DSK automáticamente)
 BASIC_PATH := bas
