feat: añadida generacion de pantallas de carga al proceso de compilacion

--- a/examples/dev8bp.conf
+++ b/examples/dev8bp.conf
@@ -41,7 +41,7 @@ DSK="${PROJECT_NAME}.dsk"
 # macOS
 RVM_PATH="/Applications/Retro Virtual Machine 2.app/Contents/MacOS/Retro Virtual Machine 2"
 CPC_MODEL=6128
-RUN_FILE="loader2.bas"
+RUN_FILE="loader.bas"
 
 # ==============================================================================
 # CONVERSIÓN DE GRÁFICOS (PNG a ASM/SCN)
