--- a/Dev8bp/templates/project.conf
+++ b/Dev8bp/templates/project.conf
@@ -68,15 +68,19 @@ DSK="${PROJECT_NAME}.dsk"
 #RUN_FILE="8BP0.BIN"
 
 # ==============================================================================
-# CONVERSIÓN DE GRÁFICOS (PNG a ASM)
+# CONVERSIÓN DE GRÁFICOS (PNG a ASM/SCN)
 # ==============================================================================
-# Descomenta y configura para convertir automáticamente PNG a ASM en el build
-
-# Ruta donde están los PNG (se buscarán recursivamente)
-#SPRITES_PATH="assets/sprites"
+# Descomenta y configura para convertir automáticamente PNG en el build
 
 # Modo CPC para la conversión (0, 1 o 2)
+# Modo 0: 160x200, 16 colores
+# Modo 1: 320x200, 4 colores
+# Modo 2: 640x200, 2 colores
 #MODE=0
+
+# --- Sprites (PNG → ASM) ---
+# Ruta donde están los PNG de sprites (se buscarán recursivamente)
+#SPRITES_PATH="assets/sprites"
 
 # Archivo ASM de salida (puede incluir ruta: "ASM/sprites.asm")
 #SPRITES_OUT_FILE="ASM/sprites.asm"
@@ -86,3 +90,8 @@ DSK="${PROJECT_NAME}.dsk"
 
 # INK para píxeles transparentes (opcional, 0-26)
 #SPRITES_TRANSPARENT_INK=""
+
+# --- Pantallas de Carga (PNG → SCN) ---
+# Ruta donde están los PNG de pantallas de carga (se buscarán recursivamente)
+# Las pantallas se convierten a formato SCN y se añaden al DSK con dirección &C000
+#LOADER_SCREEN="assets/screen"
