fet: añadimos pantalla de ejemplo

--- a/examples/basic/devcpc.conf
+++ b/examples/basic/devcpc.conf
@@ -48,7 +48,7 @@ DIST_DIR="dist"
 DSK="${PROJECT_NAME}.dsk"
 
 # Nombre del archivo CDT
-CDT="${PROJECT_NAME}.cdt"
+# CDT="${PROJECT_NAME}.cdt"
 
 # Lista de archivos a incluir en la cinta (el orden importa), y separados por espacios
 # Los archivos deben existir en obj/ y estar registrados en ${PROJECT_NAME}.map
@@ -68,7 +68,7 @@ CDT_FILES="loader.bas"
 #RUN_MODE="auto"
 
 # macOS ejemplo:
-#RVM_PATH="/Applications/Retro Virtual Machine 2.app/Contents/MacOS/Retro Virtual Machine 2"
+RVM_PATH="/Applications/Retro Virtual Machine 2.app/Contents/MacOS/Retro Virtual Machine 2"
 
 # Linux ejemplo:
 #RVM_PATH="/usr/local/bin/RetroVirtualMachine"
@@ -77,10 +77,10 @@ CDT_FILES="loader.bas"
 #RVM_PATH="/mnt/c/Program Files/RetroVirtualMachine/RetroVirtualMachine.exe"
 
 # Modelo de CPC (464, 664, 6128)
-CPC_MODEL=464
+CPC_MODEL=6128
 
 # Archivo a ejecutar automáticamente (opcional)
-#RUN_FILE="loader.bas"
+RUN_FILE="loader.bas"
 
 # ==============================================================================
 # CONVERSIÓN DE GRÁFICOS (PNG a ASM/SCN)
@@ -91,7 +91,7 @@ CPC_MODEL=464
 # Modo 0: 160x200, 16 colores
 # Modo 1: 320x200, 4 colores
 # Modo 2: 640x200, 2 colores
-MODE=0
+MODE=1
 
 # --- Sprites (PNG → ASM) ---
 # Ruta donde están los PNG de sprites (se buscarán recursivamente)
